--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "0.0.0.0" # the base hostname & protocol for your site
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Joey Kirk
+  title: Alberto Ferrari
   avatar: avatar.png
   gravatar: # Email MD5 hash
   description: "A website with blog posts and pages" # used by search engines
@@ -19,10 +19,10 @@ theme_settings:
 
   # Icons
   rss: false
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: alberto-ferrari@outlook.it
   behance:
   bitbucket:
-  dribbble: "joeykirk"
+  dribbble:
   facebook: "joeykirk"
   flickr:
   github: "madebymunsters/type-theme"
@@ -71,4 +71,4 @@ sass:
   sass_dir: _sass
   style: :compressed
 
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
